--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
             "debugOptions": [
                 "RedirectOutput"
             ],
-            "pythonPath": "/Library/Frameworks/Python.framework/Versions/3.11/bin/python3", 
+            "python": "/Library/Frameworks/Python.framework/Versions/3.11/bin/python3", 
             "jinja": true,
             "logToFile": true,
             "preLaunchTask": null,
